fixed jumping arrow inside the sharing modal reorganized the way we run document.ready so that it only executes on the appropriate page

--- a/app/assets/stylesheets/test.css.scss
+++ b/app/assets/stylesheets/test.css.scss
@@ -260,7 +260,7 @@ body.bordered_with_block_logo {
     margin-bottom: 6px;
     a { font-size: 16px; }
   }
-  #thanks-for-signing-message {
+  #thanks-for-signing-message, #thanksModal {
    .jumping_arrow {
       margin-top: -10px;
       margin-bottom: 30px;
